@@ -1,5 +1,5 @@
 <?php
-// $Id: views_query.test,v 1.1.2.9 2010-05-24 11:22:49 dereine Exp $
+// $Id: views_query.test,v 1.1.2.10 2010-05-26 15:20:50 dereine Exp $
 
 /**
  * @file
@@ -113,7 +113,8 @@ abstract class ViewsTestCase extends DrupalWebTestCase {
   /**
    * Helper function to execute a view with debugging.
    */
-  protected function executeView($view) {
+  protected function executeView($view, $args = array()) {
+    $view->pre_execute($args);
     $view->execute();
     $this->verbose('<pre>Executed view: ' . ((string) $view->build_info['query']) . '</pre>');
   }
